# AuthMicroServ

./: .gitignore  docker-compose.yaml  pyproject.toml
src/: config.py
src/core/cqrs/command/: __init__.py  command.py  command_handler.py
src/core/cqrs/query/: __init__.py  query.py  query_handler.py
src/core/domain/entities/: __init__.py  entity.py  premission.py  role.py  token.py  token_entity.py  user.py  value_objects.py
src/core/domain/entities/aggregates/: __init__.py  aggregate.py  role_aggragate.py  user_aggregate.py
src/core/domain/service/: __init__.py  auth_service.py  premisson_service.py  role_service.py  token_service.py  user_service.py
src/core/dto/: __init__.py  premission.py  role.py  token.py  token_dto.py  user.py
src/core/ports/: __init__.py  event_bus.py
src/core/ports/api/: rest.py
src/core/ports/command/: __init__.py  command.py  command_bus.py
src/core/ports/query/: __init__.py  query.py  query_bus.py
src/core/ports/repository/: __init__.py  repository.py  uow.py
src/core/usecase/: __init__.py  authenticate_usecase.py  premission_usecase.py  role_usecase.py  user_usecase.py
src/infrastructure/: __init__.py  command.py  event_bus.py  executor.py  query.py  token_provider.py  usecase_router.py  worker.py
src/infrastructure/adapters/: aio_command_mongodb_repository.py  aio_command_redis_repository.py  aio_query_mongodb_repository.py  aio_query_redis_repository.py
src/infrastructure/adapters/cqrs/: command.py  command_bus.py  query_bus.py
src/infrastructure/facade/: client_facade.py
(+2 files in other folders)
