[project]
name = "auth-serv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt>=4.2.0",
    "email-validator>=2.2.0",
    "pydantic-settings>=2.6.0",
    "pydantic>=2.9.2",
    "pyjwt>=2.9.0",
    "pymongo>=4.10.1",
    "redis>=5.2.0",
]

[tool.uv]
dev-dependencies = [
    "mypy>=1.13.0",
]
