[project]
name = "auth-serv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=4.2.0",
    "dishka>=1.4.0",
    "email-validator>=2.2.0",
    "litestar>=2.12.1",
    "loguru>=0.7.2",
    "mypy>=1.13.0",
    "pydantic-settings>=2.6.0",
    "pydantic>=2.9.2",
    "pyjwt>=2.9.0",
    "pymongo>=4.10.1",
    "redis>=5.2.0",
    "uvicorn>=0.32.0",
]

[tool.uv]
dev-dependencies = [
    "mypy>=1.13.0",
]

[tool.ruff]
# Set the maximum line length to 79.
line-length = 79

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
extend-select = [
    "I"
]
